修复linux进程启动失败的问题